Task#47 Duplication of user nicknames in table cause exception during statistics route execution Migrated to Java 22 version Updated deps Removed redundant Adjasted tests Migrated mapper Updated env vars for app and iamge